tratamento de exceções e ajustes no login

--- a/src/main/resources/templates/book/index.html
+++ b/src/main/resources/templates/book/index.html
@@ -12,7 +12,7 @@
 <body>
 
 	<div layout:fragment="content">
-		<h1>Student List</h1>
+		<h1>Book List</h1>
 		<hr />
 		<a th:href="@{/books/new}" class="btn btn-success">New Book</a><br/><br/>
 		
@@ -20,7 +20,7 @@
 			<thead>
 				<tr>
 					<th>Title</th> 
-					<th>Author</th> 
+					<th>Author</th>
 					<th>Action</th>
 				</tr>
 			</thead>
