--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -28,6 +28,7 @@
 	                <li><a href="/students">Student Registration</a></li>
 	                <li><a href="/modules">Module Registration </a></li>
 	                <li><a href="/books">Book Registration</a></li>
+	                <li><a href="/logout">Logout</a></li>
 	            </ul>
 	        </div>
 	    </div>
